--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog</title>
 </head>
 <body>
+    <div class="parent">
     <h1 class="main-header">Musical Mistakes</h1>
+    </div>
     <h2>Hi folks, we're gonna be discussing how every music taste is absolute trash. Everyone that says they have a "good taste in music" is wrong. There is no such thing, because all music is evil and bad and has something wrong woth it.</h2>
 <link rel="stylesheet" href="style.css">
 </body>
