--- a/index.html
+++ b/index.html
@@ -1,15 +1,68 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog</title>
-</head>
-<body>
-    <div class="parent">
-    <h1 class="main-header">Musical Mistakes</h1>
+  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300;400;700&display=swap" rel="stylesheet">
+  <body>
+    <h1 class="main-header">Cosmic Contemplations</h1>
+    <h2>
+      Hi folks, I'm here to tell you exactly which constellation in our night
+      sky are worth viewing, and which ones are kinda eh and aren't that great
+      of a view. These arent constellations that can be seen exclusively from
+      the northern hemisphere, they're from all over the world, so don't expect
+      to go outside and be able to see all of these.
+    </h2>
+    <div class="background">
+      <h3 class="heading">Ursa Major</h3>
+      <h3>
+        This constellation includes one of the brightest and most famous stars
+        in the sky, Alioth. This is also the 33rd brigtest star in the sky.
+      </h3>
+      <link rel="stylesheet" href="style.css" />
+      <img
+        src="https://content.artofmanliness.com/uploads/2014/07/oldursamajor.jpg"
+        class="images"
+        alt=""
+      />
+      <h3>
+        <a href="https://www.space.com/brightest-stars-in-the-sky"
+          >Ursa Major Info</a
+        >
+      </h3>
+      <h3 class="heading">Leo</h3>
+      <h3>
+        This is a very pretty constellation with a lot of stars. It's brightest
+        star is Regulus, in the lion's front right leg.
+      </h3>
+      <img
+        src="https://content.artofmanliness.com/uploads/2014/07/oldleo.jpg"
+        class="images"
+        alt=""
+      />
+      <h3>
+        <a href="https://www.space.com/brightest-stars-in-the-sky">Leo Info</a>
+      </h3>
+      <h3 class="heading">Orion</h3>
+      <h3>
+        This constellation is big too, and it's a very famous and useful
+        constellation. It's iconic, and it can be used to locate other stars in
+        the sky.
+      </h3>
+      <img
+        src="https://content.artofmanliness.com/uploads/2014/07/oldorion.jpg"
+        class="images"
+        alt=""
+      />
+      <h3>
+        <a href="https://www.space.com/brightest-stars-in-the-sky"
+          >Orion Info</a
+        >
+      </h3>
     </div>
-    <h2>Hi folks, we're gonna be discussing how every music taste is absolute trash. Everyone that says they have a "good taste in music" is wrong. There is no such thing, because all music is evil and bad and has something wrong woth it.</h2>
-<link rel="stylesheet" href="style.css">
-</body>
+  </body>
 </html>
